--- a/src/main/resources/info_it_IT.properties
+++ b/src/main/resources/info_it_IT.properties
@@ -8,6 +8,9 @@ error.data.esistente= la data inserita non esiste
 error.data.nascita= la data di nascita non può essere successiva alla data odierna
 error.type.double= deve essere un numero (il separatore cifre decimali deve essere il punto)
 error.type.long=deve essere un numero
+error.password=La password deve avere almeno una lettera maiuscola, una minuscola, un numero e un carattere speciale.
+error.type.string= Il nome non può contenere numeri, solo lettere e spazi.
+
 
 error.dao.connessione=connessione al database non riuscita.
 
