--- a/src/main/resources/info_it_IT.properties
+++ b/src/main/resources/info_it_IT.properties
@@ -3,9 +3,9 @@ error.required=è obbligatorio.
 error.minlength=il numero di caratteri non può essere minore di
 error.maxlength=il numero di caratteri non può essere maggiore di
 error.range=non è compreso tra
-error.data.oggi=la data di inizio corso è precedente a quella odierna
+error.data.oggi=la data di inizio è precedente a quella odierna
 error.data.esistente= la data inserita non esiste
-error.data.nascita= la data di nascita non può essere successiva alla data odierna
+error.data.fine= la data di fine non può essere successiva alla data di inizio
 error.type.double= deve essere un numero (il separatore cifre decimali deve essere il punto)
 error.type.long=deve essere un numero
 error.password=La password deve avere almeno una lettera maiuscola, una minuscola, un numero e un carattere speciale.
